--- a/section5intercss/css/styles.css
+++ b/section5intercss/css/styles.css
@@ -1,24 +1,55 @@
 body{
     margin: 0cm;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+
 }
 
 h1{
-    margin-top: 0;
+    margin: 50px auto 0 auto;
+    font-family: 'Sacramento', cursive;
+    font-size: 5.625rem;
+    color:#66BFBF;
+    line-height: 2;
+}
+h2{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color:#66BFBF;
+    font-weight: normal;
+}
+
+h3{
+    font-family: 'Montserrat', sans-serif;
+    color:#11999E;
+}
+a{
+    color:#11999E;
+
 }
 
 .top-container{
     background-color: #AEEFEC;
+    position: relative;
+    padding-top: 100px;
 }
 
 .middle-container{
-    background-color: chartreuse;
-    width: 200px;
-    height: 200px;
+
 }
+
+   
 
 .bottom-container{
-    background-color: cornflowerblue;
-    width: 200px;
-    height: 200px;
-
+   
 }
+.bottomcloud{
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
+}
+.topcloud{
+    position: absolute;
+    right: 300px;
+    top: 50px;
+}    
