--- a/section5intercss/css/stylespb.css
+++ b/section5intercss/css/stylespb.css
@@ -1,11 +1,46 @@
 body{
     margin: 0cm;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+
 }
 
 h1{
-    margin-top: 0;
+    margin: 50px auto 0 auto;
+    font-family: 'Sacramento', cursive;
+    font-size: 5.625rem;
+}
+h2{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
 }
 
-div{
-    background-color: #AEEFEC;
+h3{
+    font-family: 'Montserrat', sans-serif;
 }
+
+.top-container{
+    background-color: #AEEFEC;
+    position: relative;
+    padding-top: 100px;
+}
+
+.middle-container{
+
+}
+
+   
+
+.bottom-container{
+   
+}
+.bottomcloud{
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
+}
+.topcloud{
+    position: absolute;
+    right: 300px;
+    top: 50px;
+}    
