--- a/section6and7bootstrap/css/styles.css
+++ b/section6and7bootstrap/css/styles.css
@@ -18,9 +18,15 @@
      font-weight: 900;
      line-height: 1.5;  
  }
+ h2{
+     font-family: "montserrat-bold";
+     font-size: 3rem;
+     line-height: 1.5;
+ }
 
  h3{
-   font-family: "montserrat-bold";  
+   font-family: "montserrat-bold"; 
+   font-size: 1.5rem; 
  }
 
  p{
@@ -61,7 +67,7 @@
 /* Features section */
 
 #features{
-    padding:7% 15%;
+    padding:7% 0 5%;
 }
 
 .feature-box{
@@ -76,3 +82,31 @@
 .icon:hover{
     color: #ff4c68;
 }
+
+/* Testimonial Section */
+
+#testimonials{
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color:white;
+    
+}
+
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 50px;
+}
+
