--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -1,5 +1,5 @@
 <%- include("header") -%> 
-<!-- snippet tag to display date  -->
+
 
     <div class="box" id= "heading" >
         <h1> <%= listTitle %> </h1>
@@ -7,7 +7,7 @@
     
     <div class= "box">
         
-            <% for (var i=0; i<newListItems.length; i++){ %>
+            <% for (let i=0; i<newListItems.length; i++){ %>
         
         <div class="item">
             <input type="checkbox">
