--- a/ejs-challenge/public/css/styles.css
+++ b/ejs-challenge/public/css/styles.css
@@ -10,6 +10,7 @@
     margin-bottom: 0;
     font-size: 12px;
     letter-spacing: 5px;
+    background-color: lightgrey;
 }
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
@@ -32,4 +33,8 @@
 	margin-top: 25px;
 	font-size: 12px;
   color: #fff;
+}
+
+ .button {
+  margin-top: 25px;
 }
