--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -1,1 +1,32 @@
+<!-- //ejs partials for header -->
+
+<%- include('partials/header');-%>
+
 <h1>Home</h1>
+
+<!-- //render the paragraph dynamically using EJS -->
+
+<p> <%= startingContent %> </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<%- include('partials/footer');-%>
+
+
