--- a/ejs-challenge/views/partials/footer.ejs
+++ b/ejs-challenge/views/partials/footer.ejs
@@ -1,8 +1,8 @@
-
+<body>
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with ❤️ by The App Brewery</p>
+    <p>Copyright 2020 Dawn &#x1F339;</p>
   </div>
 </div>
 </body>
