--- a/ejs-challenge/views/partials/header.ejs
+++ b/ejs-challenge/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Daily Journal</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
   <nav class="navbar navbar-default">
     <div class="container">
@@ -14,9 +14,9 @@
       </div>
         <ul class="nav navbar-nav navbar-right">
           <!-- 6 -->
-          <li id="home"><a href="#">HOME</a></li>
-          <li id="about"><a href="#">ABOUT US</a></li>
-          <li id="contact"><a href="#">CONTACT US</a></li>
+          <li id="home"><a href="/">HOME</a></li>
+          <li id="about"><a href="/about">ABOUT ME</a></li>
+          <li id="contact"><a href="/contact">CONTACT ME</a></li>
         </ul>
     </div>
   </nav>
