--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -8,10 +8,15 @@
 
 <p> <%= startingContent %> </p>
 
+<!-- show new post and title on / page after inpot in compose page -->
+    <%posts.forEach(function(post){%>
+        
+        <h1><%=post.title%></h1>
+        <p><%=post.content%></p>
 
 
-
-
+    <%});%>
+    
 
 
 
