--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -8,11 +8,13 @@
 
 <p> <%= startingContent %> </p>
 
-<!-- show new post and title on / page after inpot in compose page -->
+<!-- show new post and title on / page after input in compose page . truncates to 100 chars and then adds read more link that takes you to the entire post-->
     <%posts.forEach(function(post){%>
         
         <h1><%=post.title%></h1>
-        <p><%=post.content%></p>
+        <p><%=post.content.substring(0, 100) +" ..." %>
+        <a href="/posts/<%=post.title%>">Read More</a>
+        </p>
 
 
     <%});%>
