--- a/ejs-challenge/views/partials/header.ejs
+++ b/ejs-challenge/views/partials/header.ejs
@@ -17,6 +17,7 @@
           <li id="home"><a href="/">HOME</a></li>
           <li id="about"><a href="/about">ABOUT ME</a></li>
           <li id="contact"><a href="/contact">CONTACT ME</a></li>
+          <li id="compose"><a href="/compose">COMPOSE POST</a></li>
         </ul>
     </div>
   </nav>
