--- a/todolist-v2/public/css/styles.css
+++ b/todolist-v2/public/css/styles.css
@@ -51,7 +51,7 @@ p {
   color: #00204a;
 }
 
-form.item {
+form {
   text-align: center;
   margin-left: 20px;
 }
@@ -94,3 +94,4 @@ footer {
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
 }
+
